<resources>
    <string name="app_name">Tag Along</string>
    <string name="playlist_image_description">Playlist image</string>
    <string name="track_image_description">Track image</string>
    <plurals name="playlist_size">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="track_info">%s | %s</string>
    <string name="no_tags_text">Tags will appear here after you add them</string>
    <string name="addTag_button_text">Add</string>
    <string name="addTag_editText_hint">Add a tag</string>
    <string name="repeatedTagName">This song already has that tag</string>
    <string name="loading_text">Loading...</string>
    <string name="delete_tag_icon_description">Delete tag icon</string>
    <string name="create_playlist_button_text">Create</string>
    <string name="create_playlist_top_text">Choose the tags that will be used to create the playlist:</string>
    <string name="create_playlist_bottom_text_pre_spinner">Songs with</string>
    <string name="create_playlist_bottom_text_post_spinner">of the tags</string>
    <string-array name="create_playlist_spinner_entries">
        <item>ALL</item>
        <item>ANY</item>
    </string-array>
    <string name="login_button_text">Login with Spotify</string>
    <string-array name="tabTitles">
        <item>Playlists</item>
        <item>Tags</item>
        <item>Manager</item>
    </string-array>
    <string name="playlists_tab_name">Playlists</string>
    <string name="tags_tab_name">Tags</string>
    <string name="manager_tab_name">Manager</string>
    <string name="default_new_playlist_name">New TagAlong Playlist</string>
    <string name="auto_update">Auto-update</string>
    <string name="pre_spinner_text">Add songs with</string>
    <string name="post_spinner_text">of the tags</string>
</resources>